# cookiecutter-pypackage-poetry

./: LICENSE  README.md  cookiecutter.json  example.yaml
example/: .bumpversion.cfg  Makefile  README.md  makefile  pyproject.toml  setup.cfg
{{ cookiecutter.project_name }}/: .bumpversion.cfg  Makefile  README.md  pyproject.toml  setup.cfg
{{ cookiecutter.project_name }}/.github/workflows/: ci.yml  release.yml
