[tool.poetry]
name = "example"
version = "0.0.0"
description = "My example project"
authors = ["Mikhail Burshteyn <mdburshteyn@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/m-burst/example"
homepage = "https://pypi.org/project/example"
keywords = []

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1",allow-prereleases = true}
bump2version = "^1.0.1"
flake8-awesome = ">=0.2.0"
mypy = "^0.812"
pylint = "^2.8"
pytest = "^6.2"
pytest-cov = "^2.11"
pytest-deadfixtures = "^2.1"
pytest-mock = "^3.6.0"
unify = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
